--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -78,7 +78,7 @@
                                     {% endif %}
                                     <div class="tab-content">
                                         <div class="tab-pane active p-3" id="LogIn_Tab" role="tabpanel">
-                                            <form class="form-horizontal auth-form" method="POST" enctype="multipart/form-data">
+                                            <form class="form-horizontal auth-form" action="{% url 'user:login' %}" method="POST" enctype="multipart/form-data">
 
                                                 {% csrf_token %}
 
