--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -12,12 +12,11 @@
             <i class="zmdi zmdi-lock"></i>
             You're successfully logged out
         </div>
-    
+
         <div class="lb-body">
-            <p class="message center">You are successfully logged out. <br /> <a class="color_link center" href="{% url 'auth_login' %}">Login Again</a>
+            <p class="message center">You are successfully logged out. <br /> <a class="color_link center" href="{% url 'user:login' %}">Login Again</a>
         </div>
     </div>
 </body>
 </html>
 
-            
