--- a/templates/admin_panel/includes/topbar/super_admin_top_bar.html
+++ b/templates/admin_panel/includes/topbar/super_admin_top_bar.html
@@ -14,7 +14,7 @@
                 <div class="dropdown-menu dropdown-menu-right">
                     <!-- <a class="dropdown-item" href="index.html#"><i data-feather="settings" class="align-self-center icon-xs icon-dual mr-1"></i> Settings</a> -->
                     <div class="dropdown-divider mb-0"></div>
-                    <a class="dropdown-item" href="{% url 'user:logout' %}"><i data-feather="power" class="align-self-center icon-xs icon-dual mr-1"></i> Logout</a>
+                    <a class="dropdown-item" href="{% url 'auth_logout' %}"><i data-feather="power" class="align-self-center icon-xs icon-dual mr-1"></i> Logout</a>
                 </div>
             </li>
         </ul><!--end topbar-nav-->
